# Orbitra

./: .gitignore  README.md  __main__.py  config.py  install.js  lang_expansions.py  main.py  package.json  prefs.py  pyproject.toml  requirements.txt  semantic_engine.py  semantic_vocab.py
Formula/: orbitra.rb
core/: crawler.py  engine.py  extractor.py  graph.py  scorer.py
db/: database.py
modules/: discovery.py  fingerprint.py  website.py
ui/: tui.py
web/: server.py
web/static/: dashboard.html
